@@ -173,7 +173,7 @@
 </li>
 <li>
     <strong>Create a Bugzilla account</strong><br>
-    You will need to <a href="http://bugzilla.opendarwin.org/createaccount.cgi">sign up for a Bugzilla account</a> to be able
+    You will need to <a href="bugzilla.html">sign up for a Bugzilla account</a> to be able
     to report bugs (and to comment on them). Once you have an account you can report bugs on any product on 
     <a href="http://www.opendarwin.org">OpenDarwin.org</a>. WebKit is one of the individual products listed in Bugzilla, and all 
     of our bugs can be classified in various components under the WebKit product. If you have registered, proceed to the
