@@ -1,5 +1,17 @@
 2006-02-12  Joost de Valk  <jdevalk@opendarwin.org>
 
+        Reviewed by Darin.
+
+        Added a Bugzilla page, which contains information about creating a Bugzilla account, what editbugs and canconfirm
+        bits are and how to get them.
+        
+        Changed link in reporting page to link to Bugzilla page.
+        
+        * quality/bugzilla.html: Added.
+        * quality/reporting.html:
+
+2006-02-12  Joost de Valk  <jdevalk@opendarwin.org>
+
         Reviewed by eseidel.
 
         - Changed 10.2 paragraph to say Mac OS X instead of just OS X
